--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/semantic.css"/>
     <link rel="stylesheet" href="css/leaflet.css"/>
     <link rel="stylesheet" href="css/leaflet.draw.css"/>
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <style id="_stylefy-constant-styles_"></style>
     <style id="_stylefy-styles_"></style>
   </head>
