Disables some devcards styling

--- a/resources/public/cards.html
+++ b/resources/public/cards.html
@@ -11,9 +11,14 @@
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <style id="_stylefy-constant-styles_"></style>
     <style id="_stylefy-styles_"></style>
+    <!-- NB: commented devcards styles below are *enabled* -->
+    <!-- <style id="com-rigsomelight-devcards-css"></style> -->
+    <style id="com-rigsomelight-devcards-addons-css"></style>
+    <style id="com-rigsomelight-code-highlight-css"></style>
+    <!-- <style id="com-rigsomelight-edn-css"></style> -->
   </head>
   <body>
+    <div id="com-rigsomelight-devcards-main"></div>
     <script src="cljs-out/dev-main-devcards.js"></script>
   </body>
 </html>
-
