--- a/template-reframe-aleph-psql/resources/html/home.html
+++ b/template-reframe-aleph-psql/resources/html/home.html
@@ -8,14 +8,18 @@
     <title>title</title>
   </head>
   <body class="font-sans">
-    <h1>test</h1>
-    <div id="app"></div>
-    <script crossorigin
-            src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <script crossorigin
-            src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-    <script crossorigin
-            src="https://cdnjs.cloudflare.com/ajax/libs/react-virtualized/9.21.2/react-virtualized.min.js"></script>
-    <script src="/app.min.js"></script>
+    <div id="app">loading...</div>
+    {% ifequal profile :dev %}
+    <script crossorigin src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-virtualized/9.21.2/react-virtualized.js"></script>
+    {% script "/cljs-out/dev-main.js" %}
+    {% else %}
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-virtualized/9.21.2/react-virtualized.min.js"></script>
+    {% script "/app.min.js" %}
+    {% endifequal %}
+    <script>rgm.browser.init()</script>
   </body>
 </html>
