--- a/202005-bundle/resources/public/index.html
+++ b/202005-bundle/resources/public/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="cljs-out/dev-main.js"></script>
+    <!-- <script src="cljs-out/dev-main.js"></script> -->
+    <!-- <script src="main.rollup.js"></script> -->
+    <script src="main.webpack.js"></script>
   </body>
 </html>
