Revise template-min-reframe to use new :bundle target

--- a/template-min-reframe/resources/public/index.html
+++ b/template-min-reframe/resources/public/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>sample</title>
+    <title>template min reframe</title>
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
   </head>
   <body>
     <div id="app"></div>
-    <script src="cljs-out/dev-main.js"></script>
+    <script src="cljs-out/app.js"></script>
   </body>
 </html>
