--- a/template-reframe-reitit/resources/public/index.html
+++ b/template-reframe-reitit/resources/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body class="container mx-auto">
+  <body>
     <div id="app"></div>
     <script src="cljs-out/dev-main.js"></script>
     <script>rgm.core.init()</script>
