Working quick-start example
Per https://react-table.tanstack.com/docs/quick-start

--- a/202102-react-table/public/index.html
+++ b/202102-react-table/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="container mx-auto">
     <div id="app"></div>
     <script src="/assets/app/js/main.js"></script>
+    <script charset="utf-8">my.app.start();</script>
   </body>
 </html>
