--- a/202102-headless-chrome/resources/public/index.html
+++ b/202102-headless-chrome/resources/public/index.html
@@ -7,7 +7,8 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
   </head>
   <body class="container mx-auto">
-    <div id="app"></div>
+    <h1 class="font-bold text-2xl mb-3">content outside of react</h1>
+    <div id="app">spa is booting</div>
     <script src="/assets/app/js/main.js"></script>
     <script charset="utf-8">rgm.app.start();</script>
   </body>
