--- a/202102-headless-chrome/resources/public/index.html
+++ b/202102-headless-chrome/resources/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   </head>
   <body class="container mx-auto">
     <h1 class="font-bold text-2xl mb-3">content outside of react</h1>
